Update repository links to HARoth and improve documentation
- Updated manifest.json with correct GitHub URLs and codeowner
- Enhanced README.md with professional manual installation guide
- Added proper HACS installation instructions
- Ready for HACS distribution

--- a/custom_components/roth_heating/manifest.json
+++ b/custom_components/roth_heating/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "roth_heating",
   "name": "Roth Heating System",
-  "codeowners": ["@yourusername"],
+  "codeowners": ["@CruentusRosa"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/yourusername/roth-heating-ha",
+  "documentation": "https://github.com/CruentusRosa/HARoth",
   "integration_type": "device",
   "iot_class": "local_polling",
   "requirements": ["httpx>=0.24.0"],
   "version": "1.0.0",
-  "issue_tracker": "https://github.com/yourusername/roth-heating-ha/issues"
+  "issue_tracker": "https://github.com/CruentusRosa/HARoth/issues"
 }
